5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1635_2703.log
== TEST (2019-04-12 23:13:51) 
-- CODE:
idade = int(input("informe sua idade: "))

if (idade => 18):
	msg = "eleitor"
else: 
	msg = "nao_eleitor"
	
print(msg.lower())
-- ERROR:
File "XXXX", line 3
    if (idade => 18):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:14:18) 
-- CODE:
idade = int(input("informe sua idade: "))

if (idade >= 18):
	msg = "eleitor"
else: 
	msg = "nao_eleitor"
	
print(msg.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:14:29) 
-- CODE:
idade = int(input("informe sua idade: "))

if (idade >= 18):
	msg = "eleitor"
else: 
	msg = "nao_eleitor"
	
print(msg.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:14:39) 
-- CODE:
idade = int(input("informe sua idade: "))

if (idade >= 18):
	msg = "eleitor"
else: 
	msg = "nao_eleitor"
	
print(msg.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 23:14:48) 
-- CODE:
idade = int(input("informe sua idade: "))

if (idade >= 18):
	msg = "eleitor"
else: 
	msg = "nao_eleitor"
	
print(msg.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 23:14:59) 
-- CODE:
idade = int(input("informe sua idade: "))

if (idade >= 18):
	msg = "eleitor"
else: 
	msg = "nao_eleitor"
	
print(msg.lower())
-- EXECUTION TIME:
0.140659
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
